force-app/main/default/objects/Contact_Phone__c/Contact_Phone__c.object-meta.xml
<CustomObject>
    <description>Phone numbers associated with an account</description>
    <label>Contact Phone</label>
    <nameField>
        <label>Contact Phone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Phones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>