force-app/main/default/objects/Contact_Phone__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Phone numbers associated with a contact</description>
    <inlineHelpText>Phone numbers associated with a contact</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Phones</relationshipLabel>
    <relationshipName>Contact_Phones</relationshipName>
    <type>Lookup</type>
</CustomField>