force-app/main/default/objects/Contact_Phone__c/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <description>Country code of the Phone - 1 for US, 91 for India and so on</description>
    <inlineHelpText>Country code of the Phone</inlineHelpText>
    <label>Country Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>