force-app/main/default/objects/Contact_Phone__c/fields/Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this phone primary?</description>
    <inlineHelpText>Is this phone primary?</inlineHelpText>
    <label>Is Primary</label>
    <type>Checkbox</type>
</CustomField>