force-app/main/default/objects/Contact_Phone__c/fields/Is_Trusted__c.field-meta.xml
<CustomField>
    <fullName>Is_Trusted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Trusted</label>
    <type>Checkbox</type>
</CustomField>