force-app/main/default/objects/Contact_Phone__c/fields/Phone_Id__c.field-meta.xml
<CustomField>
    <fullName>Phone_Id__c</fullName>
    <description>Unique identifier for this phone in the system of record</description>
    <inlineHelpText>Unique identifier for this phone in the system of record</inlineHelpText>
    <label>Phone Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>