force-app/main/default/objects/Contact_Phone__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <description>Phone number</description>
    <inlineHelpText>Phone number</inlineHelpText>
    <label>Phone Number</label>
    <length>64</length>
    <type>Text</type>
</CustomField>