force-app/main/default/objects/Contact_Phone__c/fields/Trust_Status__c.field-meta.xml
<CustomField>
    <fullName>Trust_Status__c</fullName>
    <description>Trust status of the Phone</description>
    <inlineHelpText>Trust status of the Phone</inlineHelpText>
    <label>Trust Status</label>
    <length>128</length>
    <type>Text</type>
</CustomField>