force-app/main/default/objects/Contact_Phone__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of phone number - like home/mobile/office/etc.,</description>
    <inlineHelpText>Type of phone number - like home/mobile/office/etc.,</inlineHelpText>
    <label>Type</label>
    <length>64</length>
    <type>Text</type>
</CustomField>